--- a/source-css/mlploungesteamgroup.css
+++ b/source-css/mlploungesteamgroup.css
@@ -670,6 +670,15 @@ a[href|="/karmapants"] {
     background-image: url(%%KarmaPants%%) !important
     }
 
+a[href|="/creeplestia"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 200px;
+    height: 200px;
+    background-image: url(%%celcreep%%) !important
+    }
+
 a[href|="/catplanet"] {
     display: block;
     clear: none;
