--- a/source-css/mylittlealcoholic.css
+++ b/source-css/mylittlealcoholic.css
@@ -461,6 +461,14 @@ a[href|="/ponyjoe"]{
     height: 100px;
     background-image: url(%%run%%)
     }
+a[href|="/sapphireshores"], a[href|="/bombaysapphire"]{
+    display: block;
+    clear: none;
+    float: left;
+    width: 168px;
+    height: 140px;
+    background-image: url(%%sapphireshores%%)
+}
 
 /* USER TEXT FOR SPECIAL PONIES */
 /* Adding after-text to somebody's name? Add them here. */
