--- a/source-css/mylittleicons.css
+++ b/source-css/mylittleicons.css
@@ -310,6 +310,30 @@ a[href|="/myeyes2"], a[href|="/i21"] {
         height: 251px;
         background-image: url(%%myeyes2%%)
         }
+a[href|="/somanybuttons"], a[href|="/i22"] {
+        display: block;
+        clear: none;
+        float: left;
+        width: 181px;
+        height: 167px;
+        background-image: url(%%somanybuttons%%)
+        }
+a[href|="/itspoweredbyaforsakenchild"], a[href|="/i23"] {
+        display: block;
+        clear: none;
+        float: left;
+        width: 180px;
+        height: 155px;
+        background-image: url(%%itspoweredbyaforsakenchild%%)
+        }
+a[href|="/helpersalute"], a[href|="/i24"] {
+        display: block;
+        clear: none;
+        float: left;
+        width: 248px;
+        height: 192px;
+        background-image: url(%%helpersalute%%)
+        }
     /**********************
     *
     *    OTHER EMOTE STUFF
